cmake_minimum_required(VERSION 3.17)
project(AdventOfCode)

set(CMAKE_CXX_STANDARD 17)

add_executable(AdventOfCode2022
        main.cpp
        Solutions/Day1.cpp
        Solutions/Day1.h
        Solutions/Day2.cpp
        Solutions/Day2.h
        Solutions/Day3.cpp
        Solutions/Day3.h
        Solutions/Day4.cpp
        Solutions/Day4.h
        Solutions/Day5.cpp
        Solutions/Day5.h
        Solutions/Day6.cpp
        Solutions/Day6.h
        Solutions/Day7.cpp
        Solutions/Day7.h
        Solutions/Day8.cpp
        Solutions/Day8.h
        Solutions/Day9.cpp
        Solutions/Day9.h
        Solutions/Day10.cpp
        Solutions/Day10.h
        Solutions/Day11.cpp
        Solutions/Day11.h
        Solutions/Day12.cpp
        Solutions/Day12.h Solutions/Day13.cpp Solutions/Day13.h)